@@ -1,0 +1,19 @@
+<?php
+/**
+ * Properties for the DiscussDownloadAttachment snippet.
+ *
+ * @package discuss
+ */
+$properties = array(
+/*
+    array(
+        'name' => '',
+        'desc' => '',
+        'type' => 'textfield',
+        'options' => '',
+        'value' => '',
+    ),
+    */
+);
+
+return $properties;
