@@ -1,4 +1,4 @@
 <li>
-    <a href="[[+url]]" title="[[+filename]]">[[+filename]]</a>
+    <a href="[[~[[++discuss.dl_attachment_resource]]? &file=`[[+id]]`]]" title="[[+filename]]">[[+filename]]</a>
     <span>[[+filesize]] - [[%discuss.downloaded_times? &num=`[[+downloads]]`]]</span>
 </li>
