@@ -4,21 +4,25 @@
  *
  * @package discuss
  */
-require_once $modx->getOption('discuss.core_path').'model/discuss/discuss.class.php';
-$discuss = new Discuss($modx,$scriptProperties);
+$discuss = $modx->getService('discuss','Discuss',$modx->getOption('discuss.core_path',null,$modx->getOption('core_path').'components/discuss/').'model/discuss/',$scriptProperties);
+if (!($discuss instanceof Discuss)) return '';
 $discuss->initialize($modx->context->get('key'));
 
+/* get post */
 if (empty($_REQUEST['post'])) { $modx->sendErrorPage(); }
 $post = $modx->getObject('disPost',$_REQUEST['post']);
 if ($post == null) { $modx->sendErrorPage(); }
 
-/* setup defaults */
-$properties = $post->toArray();
+/* setup default snippet properties */
+$replyPrefix = $modx->getOption('replyPrefix',$scriptProperties,'Re: ');
+
+/* setup placeholders */
+$placeholders = $post->toArray();
 
 /* get thread root */
 $thread = $post->getThreadRoot();
 if ($thread == null) $modx->sendErrorPage();
-$properties['thread'] = $thread->get('id');
+$placeholders['thread'] = $thread->get('id');
 
 /* get board breadcrumb trail */
 $c = $modx->newQuery('disBoard');
@@ -29,40 +33,38 @@ $c->where(array(
 $c->sortby('Ancestors.depth','ASC');
 $ancestors = $modx->getCollection('disBoard',$c);
 
-$trail = '<a href="'.$modx->makeUrl($modx->getOption('discuss.board_list_resource')).'">Home</a> / ';
+/* build breadcrumbs */
+$trail = '<a href="'.$modx->makeUrl($modx->getOption('discuss.board_list_resource')).'">'.$modx->lexicon('discuss.home').'</a> / ';
 foreach ($ancestors as $ancestor) {
-    $url = $modx->makeUrl($modx->getOption('discuss.board_resource'),'','?board='.$ancestor->get('id'));
-    $trail .= '<a href="'.$url.'">'.$ancestor->get('name').'</a>';
-    $trail .= ' / ';
+    $trail .= '<a href="[[~[[++discuss.board_resource]]? &board=`'.$ancestor->get('id').'`]]">'.$ancestor->get('name').'</a> / ';
 }
-$trail .= $modx->lexicon('reply_to_post',array(
+$trail .= $modx->lexicon('discuss.reply_to_post',array(
     'post' => '<a href="[[~[[++discuss.thread_resource]]? &thread=`'.$thread->get('id').'`]]">'.$post->get('title').'</a>',
 ));
-$properties['trail'] = $trail;
-
+$placeholders['trail'] = $trail;
 
 /* if POST, process new thread request */
 if (!empty($_POST)) {
     $modx->toPlaceholders($_POST,'post');
     $result = include $discuss->config['processorsPath'].'web/post/reply.php';
     if ($discuss->processResult($result)) {
-        $url = $modx->makeUrl($modx->getOption('discuss.thread_resource')).'?thread='.$thread->get('id').'#dis-post-'.$result['object']['id'];
+        $url = $modx->makeUrl($modx->getOption('discuss.thread_resource'),'','?thread='.$thread->get('id')).'#dis-post-'.$result['object']['id'];
         $modx->sendRedirect($url);
     }
 } else {
-    $modx->setPlaceholder('post.title','Re: '.$post->get('title'));
+    $modx->setPlaceholder('post.title',$replyPrefix.$post->get('title'));
 }
 
 /* get thread */
-$properties['thread_posts'] = $modx->hooks->load('post/getthread',array(
+$placeholders['thread_posts'] = $modx->hooks->load('post/getthread',array(
     'post' => &$post,
     'thread' => &$thread,
 ));
 
 /* set max attachment limit */
-$properties['max_attachments'] = $modx->getOption('discuss.attachments_max_per_post',null,5);
+$placeholders['max_attachments'] = $modx->getOption('discuss.attachments_max_per_post',null,5);
 $modx->regClientStartupHTMLBlock('<script type="text/javascript">
-$(function() { DIS.config.attachments_max_per_post = '.$properties['max_attachments'].'; });
+$(function() { DIS.config.attachments_max_per_post = '.$placeholders['max_attachments'].'; });
 </script>');
 
 /* output form to browser */
@@ -70,4 +72,4 @@ $modx->regClientStartupScript($discuss->config['jsUrl'].'web/dis.post.reply.js')
 $modx->setPlaceholder('discuss.error_panel',$discuss->getChunk('disError'));
 $modx->setPlaceholder('discuss.post',$post->get('title'));
 
-return $discuss->output('thread/reply',$properties);
+return $discuss->output('thread/reply',$placeholders);
