@@ -3,8 +3,8 @@
  *
  * @package discuss
  */
-require_once $modx->getOption('discuss.core_path').'model/discuss/discuss.class.php';
-$discuss = new Discuss($modx,$scriptProperties);
+$discuss = $modx->getService('discuss','Discuss',$modx->getOption('discuss.core_path',null,$modx->getOption('core_path').'components/discuss/').'model/discuss/',$scriptProperties);
+if (!($discuss instanceof Discuss)) return '';
 $discuss->initialize($modx->context->get('key'));
 $discuss->setSessionPlace('thread:'.$_REQUEST['thread']);
 
