@@ -45,6 +45,8 @@ $_lang['discuss.category_err_remove'] = 'An error occurred while trying to remov
 $_lang['discuss.category_err_save'] = 'An error occurred while trying to save the Category.';
 $_lang['discuss.category_remove'] = 'Remove Category';
 $_lang['discuss.category_remove_confirm'] = 'Are you sure you want to remove this category and all its boards entirely?';
+$_lang['discuss.editedon_post'] = 'Edited [[+on]] by [[+user]]';
+$_lang['discuss.ip'] = 'IP';
 $_lang['discuss.member_add'] = 'Add Member';
 $_lang['discuss.member_remove'] = 'Remove Member';
 $_lang['discuss.member_remove_confirm'] = 'Are you sure you want to remove this User from this User Group?';
