@@ -2,6 +2,9 @@ Changelog for Discuss.
 
 Discuss 0.1
 ====================================
+- Added editedon support to posts
+- Added download attachment support
+- Added icons for board/category in mgr tree
 - Enabled coloring of usernames based on usergroup
 - i18n of mgr processors and JS
 - Random bugfixes, optimizations, code tweaks
